# server/docs/swagger.json
@@ -1,6 +1,6 @@
 {
     "schemes": [
-        "http"
+        "commit"
     ],
     "swagger": "2.0",
     "info": {
@@ -36,7 +36,13 @@
                         }
                     },
                     "400": {
-                        "description": "Invalid request",
+                        "description": "Invalid credentials",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
@@ -68,7 +74,7 @@
                         }
                     },
                     "500": {
-                        "description": "Failed to store value",
+                        "description": "Failed to store user",
                         "schema": {
                             "type": "string"
                         }
@@ -78,7 +84,7 @@
         },
         "/result/{task_id}": {
             "get": {
-                "description": "Retrieves the current result of the task by its id.",
+                "description": "Retrieves the current result of the task by its ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -88,7 +94,7 @@
                 "tags": [
                     "tasks"
                 ],
-                "summary": "Get task result",
+                "summary": "GetTask task result",
                 "parameters": [
                     {
                         "type": "string",
@@ -125,13 +131,19 @@
                         "schema": {
                             "type": "string"
                         }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "string"
+                        }
                     }
                 }
             }
         },
         "/status/{task_id}": {
             "get": {
-                "description": "Retrieves the current status of the task by its id.",
+                "description": "Retrieves the current status of the task by its ID.",
                 "consumes": [
                     "application/json"
                 ],
@@ -141,7 +153,7 @@
                 "tags": [
                     "tasks"
                 ],
-                "summary": "Get task status",
+                "summary": "GetTask task status",
                 "parameters": [
                     {
                         "type": "string",
@@ -175,6 +187,12 @@
                     },
                     "404": {
                         "description": "Task not found",
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
                         "schema": {
                             "type": "string"
                         }
