# server/http/http.go
@@ -1,15 +1,16 @@
 package http
 
 import (
+	"context"
 	"encoding/json"
 	"errors"
 	"github.com/go-chi/chi/v5"
 	"github.com/google/uuid"
 	httpSwagger "github.com/swaggo/http-swagger"
-	. "github.com/yankokirill/ImageProcessor/messaging"
-	. "github.com/yankokirill/ImageProcessor/models"
-	_ "github.com/yankokirill/ImageProcessor/server/docs"
-	. "github.com/yankokirill/ImageProcessor/storage"
+	. "hw/messaging"
+	. "hw/models"
+	_ "hw/server/docs"
+	. "hw/storage"
 	"net/http"
 	"strings"
 )
@@ -29,7 +30,6 @@ func NewServer(storage Storage, broker Producer) *Server {
 	return &Server{storage, broker}
 }
 
-// AuthMiddleware checks for a valid authorization token in the request header
 func (s *Server) AuthMiddleware(next http.HandlerFunc) http.HandlerFunc {
 	return func(w http.ResponseWriter, r *http.Request) {
 		authHeader := r.Header.Get("Authorization")
@@ -42,31 +42,27 @@ func (s *Server) AuthMiddleware(next http.HandlerFunc) http.HandlerFunc {
 			return
 		}
 
-		tokenStr := strings.TrimPrefix(authHeader, "Bearer ")
-		token, err := uuid.Parse(tokenStr)
-
-		if err != nil || !s.storage.SessionExists(token) {
+		token := strings.TrimPrefix(authHeader, "Bearer ")
+		userID, err := s.storage.GetUserBySession(token)
+		if err != nil {
 			http.Error(w, "Unauthorized: Invalid token", http.StatusUnauthorized)
 			return
 		}
 
-		next.ServeHTTP(w, r)
+		ctx := context.WithValue(r.Context(), "user_id", userID)
+		next.ServeHTTP(w, r.WithContext(ctx))
 	}
 }
 
-func parseUserRequest(r *http.Request) (user User, err error) {
-	if err = json.NewDecoder(r.Body).Decode(&user); err != nil {
-		return
+func parseUserRequest(r *http.Request) (*User, error) {
+	var user User
+	if err := json.NewDecoder(r.Body).Decode(&user); err != nil {
+		return nil, err
 	}
 	if user.Login == "" || user.Password == "" {
-		err = errors.New("invalid request")
+		return nil, errors.New("invalid request")
 	}
-	return
-}
-
-func parseTaskRequest(r *http.Request) (uuid.UUID, error) {
-	taskID := chi.URLParam(r, "task_id")
-	return uuid.Parse(taskID)
+	return &user, nil
 }
 
 func sendJSON(w http.ResponseWriter, key, value string) {
@@ -83,7 +79,7 @@ func sendJSON(w http.ResponseWriter, key, value string) {
 // @Produce  json
 // @Success 201 "User registered successfully"
 // @Failure 400 {string} string "Invalid request"
-// @Failure 500 {string} string "Failed to store value"
+// @Failure 500 {string} string "Failed to store user"
 // @Router /register [post]
 func (s *Server) postRegisterHandler(w http.ResponseWriter, r *http.Request) {
 	newUser, err := parseUserRequest(r)
@@ -94,7 +90,11 @@ func (s *Server) postRegisterHandler(w http.ResponseWriter, r *http.Request) {
 
 	newUser.ID = uuid.New()
 	if err := s.storage.AddUser(newUser); err != nil {
-		http.Error(w, "Failed to store value", http.StatusInternalServerError)
+		if _, ok := err.(*UserExistsError); ok {
+			http.Error(w, "User already exists", http.StatusBadRequest)
+		} else {
+			http.Error(w, "Failed to store user", http.StatusInternalServerError)
+		}
 		return
 	}
 	w.WriteHeader(http.StatusCreated)
@@ -107,7 +107,8 @@ func (s *Server) postRegisterHandler(w http.ResponseWriter, r *http.Request) {
 // @Accept  json
 // @Produce  json
 // @Success 200 {object} map[string]string "Token"
-// @Failure 400 {string} string "Invalid request"
+// @Failure 400 {string} string "Invalid credentials"
+// @Failure 500 {string} string "Internal Server Error"
 // @Router /login [post]
 func (s *Server) postLoginHandler(w http.ResponseWriter, r *http.Request) {
 	user, err := parseUserRequest(r)
@@ -118,23 +119,40 @@ func (s *Server) postLoginHandler(w http.ResponseWriter, r *http.Request) {
 
 	token, err := s.storage.Login(user)
 	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
+		if _, ok := err.(*InvalidCredentialsError); ok {
+			http.Error(w, err.Error(), http.StatusBadRequest)
+		} else {
+			http.Error(w, "Internal Server Error", http.StatusInternalServerError)
+		}
 		return
 	}
-	sendJSON(w, "token", token.String())
+	sendJSON(w, "token", token)
 }
 
-func (s *Server) processRequest(taskID uuid.UUID) Response {
-	value, err := s.storage.Get(taskID)
+func (s *Server) getTaskInfo(r *http.Request) Response {
+	strTaskID := chi.URLParam(r, "task_id")
+	taskID, err := uuid.Parse(strTaskID)
 	if err != nil {
-		return Response{nil, "Task not found", http.StatusNotFound}
+		return Response{nil, err.Error(), http.StatusBadRequest}
 	}
-	return Response{Data: &value}
+	task, err := s.storage.GetTask(taskID)
+	if err != nil {
+		if _, ok := err.(*TaskNotFoundError); ok {
+			return Response{nil, "Task not found", http.StatusNotFound}
+		} else {
+			return Response{nil, "Internal Server Error", http.StatusInternalServerError}
+		}
+	}
+	userID := r.Context().Value("user_id").(uuid.UUID)
+	if task.UserID != userID {
+		return Response{nil, "Forbidden: You are not the owner of this task", http.StatusForbidden}
+	}
+	return Response{Data: &task}
 }
 
 // getStatusHandler retrieves the status of a task.
-// @Summary Get task status
-// @Description Retrieves the current status of the task by its id.
+// @Summary GetTask task status
+// @Description Retrieves the current status of the task by its ID.
 // @Tags tasks
 // @Accept  json
 // @Produce  json
@@ -143,15 +161,10 @@ func (s *Server) processRequest(taskID uuid.UUID) Response {
 // @Failure 400 {string} string "Invalid request"
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 404 {string} string "Task not found"
+// @Failure 500 {string} string "Internal Server Error"
 // @Router /status/{task_id} [get]
 func (s *Server) getStatusHandler(w http.ResponseWriter, r *http.Request) {
-	taskID, err := parseTaskRequest(r)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-
-	response := s.processRequest(taskID)
+	response := s.getTaskInfo(r)
 	if response.Error != "" {
 		http.Error(w, response.Error, response.Code)
 		return
@@ -160,8 +173,8 @@ func (s *Server) getStatusHandler(w http.ResponseWriter, r *http.Request) {
 }
 
 // getResultHandler retrieves the result of a task.
-// @Summary Get task result
-// @Description Retrieves the current result of the task by its id.
+// @Summary GetTask task result
+// @Description Retrieves the current result of the task by its ID.
 // @Tags tasks
 // @Accept  json
 // @Produce  json
@@ -170,15 +183,10 @@ func (s *Server) getStatusHandler(w http.ResponseWriter, r *http.Request) {
 // @Failure 400 {string} string "Invalid request"
 // @Failure 401 {string} string "Unauthorized"
 // @Failure 404 {string} string "Task not found"
+// @Failure 500 {string} string "Internal Server Error"
 // @Router /result/{task_id} [get]
 func (s *Server) getResultHandler(w http.ResponseWriter, r *http.Request) {
-	taskID, err := parseTaskRequest(r)
-	if err != nil {
-		http.Error(w, err.Error(), http.StatusBadRequest)
-		return
-	}
-
-	response := s.processRequest(taskID)
+	response := s.getTaskInfo(r)
 	if response.Error != "" {
 		http.Error(w, response.Error, response.Code)
 		return
@@ -186,12 +194,16 @@ func (s *Server) getResultHandler(w http.ResponseWriter, r *http.Request) {
 	sendJSON(w, "result", response.Data.Result)
 }
 
-func (s *Server) createTask(data *ImageProcessorPayload) Response {
-	task := Task{
-		ID:      uuid.New(),
-		Payload: *data,
-		Status:  "in_progress",
+func (s *Server) createTask(r *http.Request) Response {
+	task := &Task{
+		ID:     uuid.New(),
+		UserID: r.Context().Value("user_id").(uuid.UUID),
+		Status: "in_progress",
 	}
+	if err := json.NewDecoder(r.Body).Decode(&task.Payload); err != nil {
+		return Response{nil, "Invalid request", http.StatusBadRequest}
+	}
+
 	if err := s.storage.AddTask(task); err != nil {
 		return Response{nil, "Failed to add task", http.StatusInternalServerError}
 	}
@@ -200,7 +212,7 @@ func (s *Server) createTask(data *ImageProcessorPayload) Response {
 	if err != nil {
 		return Response{nil, "Failed to enqueue task", http.StatusInternalServerError}
 	}
-	return Response{Data: &task}
+	return Response{Data: task}
 }
 
 // postTaskHandler handles task creation requests.
@@ -215,42 +227,15 @@ func (s *Server) createTask(data *ImageProcessorPayload) Response {
 // @Failure 500 {string} string "Failed to add task"
 // @Router /task [post]
 func (s *Server) postTaskHandler(w http.ResponseWriter, r *http.Request) {
-	var data ImageProcessorPayload
-	if err := json.NewDecoder(r.Body).Decode(&data); err != nil {
-		http.Error(w, "Invalid request", http.StatusBadRequest)
-		return
-	}
-
-	response := s.createTask(&data)
+	response := s.createTask(r)
 	if response.Error != "" {
 		http.Error(w, response.Error, response.Code)
-	} else {
-		w.WriteHeader(http.StatusCreated)
-		sendJSON(w, "task_id", response.Data.ID.String())
-	}
-}
-
-// postCommitHandler updates the task status and result.
-func (s *Server) postCommitHandler(w http.ResponseWriter, r *http.Request) {
-	taskID, err := parseTaskRequest(r)
-	if err != nil {
-		http.Error(w, "Invalid request", http.StatusBadRequest)
 		return
 	}
-
-	data := struct {
-		Status string `json:"status"`
-		Result string `json:"result"`
-	}{}
-	if err := json.NewDecoder(r.Body).Decode(&data); err != nil {
-		http.Error(w, "Invalid request", http.StatusBadRequest)
-		return
-	}
-
-	s.storage.UpdateTaskStatus(taskID, data.Status, data.Result)
+	w.WriteHeader(http.StatusCreated)
+	sendJSON(w, "task_id", response.Data.ID.String())
 }
 
-// CreateAndRunServer initializes and starts the HTTP server
 func CreateAndRunServer(server *Server, addr string) error {
 	r := chi.NewRouter()
 
@@ -261,7 +246,6 @@ func CreateAndRunServer(server *Server, addr string) error {
 		r.Get("/status/{task_id}", server.AuthMiddleware(server.getStatusHandler))
 		r.Get("/result/{task_id}", server.AuthMiddleware(server.getResultHandler))
 		r.Post("/task", server.AuthMiddleware(server.postTaskHandler))
-		r.Post("/commit/{task_id}", server.postCommitHandler)
 	})
 
 	httpServer := &http.Server{
